# hive

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml
.ast-grep/rules/: silent-result-swallow.yml  spawned-task-swallow.yml
docs/specs/: 2026-04-13-hive-tui-design.md  2026-04-13-hive-v2-functional-pipeline.md
docs/superpowers/plans/: 2026-04-13-hive-implementation.md  2026-04-13-hive-v2-implementation.md  2026-04-15-persistent-logging.md  2026-04-15-pr-watch-phase.md
docs/superpowers/specs/: 2026-04-15-persistent-logging-design.md
src/: app.rs  error.rs  main.rs
src/cli/: configure.rs  init.rs  mod.rs  status.rs  wizard.rs
src/config/: global.rs  mod.rs  project.rs  resolve.rs
src/domain/: events.rs  issue.rs  mod.rs  phase.rs  story_run.rs
src/git/: github.rs  mock_github.rs  mod.rs  worktree.rs
src/notifiers/: discord.rs  mod.rs  slack.rs
src/orchestrator/: engine.rs  mod.rs  prompts.rs  retry.rs  transitions.rs
src/runners/: claude.rs  codex.rs  gemini.rs  mod.rs
src/state/: agent_log.rs  mod.rs  persistence.rs
src/trackers/: jira.rs  linear.rs  mod.rs
src/tui/: mod.rs
src/tui/tabs/: agents.rs  config_tab.rs  mod.rs  stories.rs  worktrees.rs
src/tui/widgets/: log_entry.rs  log_viewer.rs  mod.rs  phase_bar.rs  status_bar.rs
