[package]
name = "hive"
version = "0.1.0"
edition = "2024"
description = "Agent orchestration TUI for story-to-PR automation"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
