[package]
name = "hive"
version = "0.1.0"
edition = "2024"
description = "Agent orchestration TUI for story-to-PR automation"
license = "MIT"

# Lints that help catch the silent-Result / let-it-die antipatterns
# documented in CLAUDE.md. Combined with the ast-grep rules in
# .ast-grep/rules/ (run `ast-grep scan src/`) these form our local
# enforcement layer.
[lints.clippy]
question_mark = "warn"          # prefer `?` over `if let Err(e) = x { return Err(e) }`
must_use_candidate = "warn"     # flag fns that should carry #[must_use]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
octocrab = "0.49"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
